--- a/examples/example02-bcp02-ft.html
+++ b/examples/example02-bcp02-ft.html
@@ -46,7 +46,7 @@
           purse: feeWif,
         });
 
-        let { txid, genesis, codehash } = await ft.genesis({
+        let { txid, genesis, codehash, sensibleId } = await ft.genesis({
           genesisWif: CoffeeShop.wif,
           tokenName: "COFFEE COIN",
           tokenSymbol: "CC",
@@ -63,6 +63,7 @@ codehash: ${codehash}`);
           let { txid } = await ft.issue({
             genesis: genesis,
             codehash: codehash,
+            sensibleId: sensibleId,
             genesisWif: CoffeeShop.wif,
             receiverAddress: CoffeeShop.address,
             tokenAmount: "1000000000000",
