--- a/examples/example02-bcp02-ft.html
+++ b/examples/example02-bcp02-ft.html
@@ -55,7 +55,8 @@
         console.log(`genesis success!
 txid: ${txid}
 genesis: ${genesis}
-codehash: ${codehash}`);
+codehash: ${codehash}
+sensibleId: ${sensibleId}`);
 
         //wait for a moment
         await sleep(3);
